Adds plugin scripted. Re-organizes the code base